[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Interact/Armario.gd" type="Script" id=1]
[ext_resource path="res://GFX/Piso.png" type="Texture" id=2]
[ext_resource path="res://SFX/Destrancar.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62.0219, 28.9439 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.8199, 38.9788 )

[node name="Armario" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 31.9728, 0 )
scale = Vector2( 1.99915, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32.6133, 0 )
shape = SubResource( 1 )

[node name="Detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 30.1046, 1.25436 )
shape = SubResource( 2 )

[node name="SpawnVassoura" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_Detect_body_exited"]
